--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,9 +1,9 @@
-FROM node:21 as build_step
+FROM node:20-alpine as build_step
 WORKDIR /app
 COPY package.json /app
 RUN npm install
 COPY . /app
-RUN npm run build -- --outputPath=./dist/out
+RUN npm run build
 
 FROM nginx as prod
-COPY --from=build_step /app/dist/out/ /usr/share/nginx/html
+COPY --from=build_step /app/dist/tlcfront /usr/share/nginx/html
